--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 <h1 class="header--main">Discover hidden in the world around you</h1>
 <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
-
+<video autoplay loop>
+    <source src="resources/video/MP4 stock video.mp4" type="video/mp4">
+</video>
 
 
 </body>
