--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <video autoplay loop>
     <source src="resources/video/MP4 stock video.mp4" type="video/mp4">
 </video>
-
+<h2 class="header--secondary">Your personal travel guide</h2>
+<h4 class="header--sub">Excursion remembers places you like, and recommeds new points of interest around you.</h4>
+<p><img src="resources/images/camp.jpg"</p>
+<p><img src="resources/images/phone.png"</p>
+<h4 class="header--sub">Coming soon for Iphone and Android</h4>
+<p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
 
 </body>
 
